--- a/views/partials/scriptPartials/onPostLoadScripts.handlebars
+++ b/views/partials/scriptPartials/onPostLoadScripts.handlebars
@@ -25,6 +25,12 @@ $(function(){
 
         needPostsOlderThan = newlyLoadedStuff.last().find("#oldesttimestamp").html(); //the new oldest-post-loaded timestamp is provided by the server in this element
 
+        if(newlyLoadedStuff.find('img.link-preview-image').length > 0){
+            newlyLoadedStuff.find('img.link-preview-image').on('error',function(){
+                $(this).replaceWith('<div class="link-preview-image" style="font-size:50px;text-align:center;"><i class="fas fa-link"></i></div>');
+            })
+        }
+
         if (newlyLoadedStuff.find('.post-images').length > 0) {
             var imagesLoaded = newlyLoadedStuff.find('.post-single-image').length;
             console.log("images loaded: " + imagesLoaded);
