--- a/views/partials/newpostform.handlebars
+++ b/views/partials/newpostform.handlebars
@@ -3,17 +3,17 @@
     <div id="editor" class="editable-post-content editable-text" id="postContent">
       <p><br></p>
     </div>
-  <div class="form-row my-2" id="postContentWarningsContainer">
+    <div class="form-row mt-2 card p-1" id="emojiWindow" style="display:none">
+      {{> emojilist }}
+    </div>
+  <div class="form-row mt-2" id="postContentWarningsContainer">
     <input type="text" class="form-control" name="postContentWarnings" id="postContentWarnings" placeholder="Warn others about your post's content." {{#if sessionFlash.errorContentWarnings }}value="{{sessionFlash.errorContentWarnings}}" {{/if}} />
   </div>
   <div class="link-form-cont"> {{! this is only here bc jquery applies display:block when it slides something down, which would break the below div if it slid down that}}
     <div class="my-2 linkPreviewAddingForm">
-      <input type="text" class="form-control" name="linkPreviewUrlEntry" id="linkPreviewUrlEntry" placeholder="Enter a url..." />
-      <button class="btn btn-primary btn-fade ml-3 link-add">Please Add This Link He Is A Good Link</button>
+      <input type="text" class="form-control" name="linkPreviewUrlEntry" id="linkPreviewUrlEntry" placeholder="endless.horse" />
+      <button class="btn btn-primary btn-fade ml-1 link-add"><i class="fas fa-plus"></i></button>
     </div>
-  </div>
-  <div class="form-row my-2 card p-1" id="emojiWindow" style="display:none">
-    {{> emojilist }}
   </div>
   <div id="bottomPostControlsRow" class="form-row mt-2 post-controls">
     {{! Hide this div in communities}}
