--- a/views/partials/newreplyform.handlebars
+++ b/views/partials/newreplyform.handlebars
@@ -5,14 +5,14 @@
       <p><br></p>
     </div>
   </div>
+  <div class="form-row mt-2 card p-1 replyEmojiWindow" style="display:none">
+    {{> emojilist }}
+  </div>
   <div class="link-form-cont"> {{! this is only here bc jquery applies display:block when it slides something down, which would break the below div if it slid down that}}
     <div class="my-2 linkPreviewAddingForm">
-      <input type="text" class="form-control" name="linkPreviewUrlEntry" id="linkPreviewUrlEntry" placeholder="Enter a url..." />
-      <button class="btn btn-primary btn-fade ml-3 link-add">Please Add This Link He Is A Good Link</button>
+      <input type="text" class="form-control" name="linkPreviewUrlEntry" id="linkPreviewUrlEntry" placeholder="endless.horse" />
+      <button class="btn btn-primary btn-fade ml-1 link-add"><i class="fas fa-plus"></i></button>
     </div>
-  </div>
-  <div class="form-row my-2 card p-1 replyEmojiWindow" style="display:none">
-    {{> emojilist }}
   </div>
   <div id="replyControlsRow" class="form-row mt-2 post-controls">
     <div class="leftSideControls">
